<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/coinListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/text_label_1" />
    <item
        android:id="@+id/trendingCoinFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_trending_up_24"
        android:title="@string/text_label_2" />
    <item
        android:id="@+id/favouriteFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/text_label_3" />

    <!--   coin details Page Menu-->
    <item
        android:enabled="true"
        android:icon="@drawable/ic_baseline_trending_up_24"
        android:title="@string/text_label_4"
        android:visible="false" />
    <item
        android:enabled="true"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/text_label_5"
        android:visible="false" />
</menu>